--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^3.0.3"
   },
   "dependencies": {
+    "@pusher/push-notifications-server": "^1.2.7",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.0",
     "cookie-parser": "^1.4.6",
